--- a/undergrad_styles.css
+++ b/undergrad_styles.css
@@ -25,3 +25,15 @@ li a:hover {
 a {
   text-decoration: none;
 }
+ 
+ h2 {
+   color: #fdb515;
+ }
+      
+ h1 {
+   color: #da2128;
+ }
+      
+ h3 {
+   font-size: 25px;
+ }
