--- a/home_styles.css
+++ b/home_styles.css
@@ -38,7 +38,7 @@
   footer {
     text-align: center;
     padding: 3px;
-    background-color: #333;
+    background-color: #D3D3D3;
     color: white;
   }
 
