--- a/undergrad_styles.css
+++ b/undergrad_styles.css
@@ -41,6 +41,6 @@ a {
  footer {
     text-align: center;
     padding: 3px;
-    background-color: #333;
+    background-color: #D3D3D3;
     color: white;
   }
